--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </tr>
 
                 </table>
-                <figure>
+<!--                 <figure>
                     <figcaption>
                         <h4>Varying block size</h4>
                     </figcaption>
@@ -163,7 +163,7 @@
 
                 <figure>
                     <figcaption>
-                        Varying registers count
+                        <h4>Varying registers count</h4>
                     </figcaption>
                 </figure>
 
@@ -172,7 +172,7 @@
                         <h4>Varying shared memory</h4>
                     </figcaption>
                 </figure>
-
+ -->
 
             </div>
         </div>
