--- a/index.html
+++ b/index.html
@@ -183,8 +183,6 @@
 
         <script src="calculator.js"></script>
         <script src="graph.js"></script>
-        <script src="app.js">
-
-        </script>
+        <script src="app.js"></script>
     </body>
 </html>
