--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>CUDA Occupancy Calculator</title>
     </head>
     <body>
+        <a href="https://github.com/roadhump/cuda-calculator"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
         <div class="container">
             <div class="navbar">
                 <div class="navbar-inner">
@@ -186,8 +187,4 @@
         <script src="graph.js"></script>
         <script src="app.js"></script>
     </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> gh-pages
