--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="css/style.css" rel="stylesheet" media="screen">
-        <title>CUDA Calculator</title>
         <title>CUDA Occupancy Calculator</title>
     </head>
     <body>
@@ -12,7 +11,7 @@
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="container">
-                        <a href="" class="brand">CUDA Calculator</a>
+                        <a href="" class="brand">CUDA Occupancy Calculator</a>
                     </div>
                 </div>
             </div>
